overflow fix

--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -1,7 +1,7 @@
 @import "../../helpers/constants.scss";
 
 .wrapper {
-  overflow: auto;
+  overflow: hidden;
   display: grid;
   grid-template-rows: auto 1fr auto;
   min-height: 100vh;
